update translations & assets

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "Proqram və inkişaf etdiriciləriylə bağlı bilgi",
   "ABOUT_TITLE": "Haqqında",
   "ADD_NEW_FOLDER": "Yeni qovluq əlavə et",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "İndi Çalınanlara Əlavə Et",
   "ADD_TO_PLAYLIST": "Oynatma sırasına əlavə et",
   "ALBUM": "Albomlar",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "Sənətçi",
   "ASCENDING": "Artan",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Albom bitdikdən sonra avtomatik olaraq indi çalınanlar kolleksiyasına digər mahnıları əlavə et",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A'dan Z'yə",
   "BUFFERING": "Yüklənir",
   "CANCEL": "Ləğv et",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Kolleksiya",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "\"NAME\" adlı albom silinsinmi?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Sil",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "Önərilənlər",
   "REFRESH": "YENİLƏ",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Yenilə",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "SİL",
   "REMOVE_FROM_PLAYLIST": "Oynatma sırasından sil",
   "REPEAT": "Təkrar et",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Paylaş",
   "SHOW_ALBUM": "Albomu görüntülə",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Bir parça oynatdıdan sonra \"Now playing\" ekranına keç",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Musiqi irəliləməsini tapşırıq çubuğunda göstər",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Qarışdır",
   "SORT": "Növ",
   "SORT_BY": "Sırala",
