--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "اطلاعاتی درمورد این برنامه و برنامه‌نویسان آن",
   "ABOUT_TITLE": "درباره",
   "ADD_NEW_FOLDER": "اضافه کردن پوشه جدید",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "اضافه کردن به پخش حال",
   "ADD_TO_PLAYLIST": "اضافه کردن به لیست پخش",
   "ALBUM": "آلبوم‌ها",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "هنرمند",
   "ASCENDING": "صعودی",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "اضافه کردن بقیهٔ آهنگ‌ها از مجموعه به پخش وقتی آلبوم کامل شد",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A تا Z",
   "BUFFERING": "بافرینگ...",
   "CANCEL": "لغو",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "مجموعه",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "آیا می‌خواهید آلبوم \"NAME\" را حذف کنید؟",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "حذف",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "پیشنهادات",
   "REFRESH": "بروزرسانی",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "بروزرسانی",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "حذف",
   "REMOVE_FROM_PLAYLIST": "حذف از لیست پخش",
   "REPEAT": "تکرار",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "تم",
   "SHARE": "اشتراک گذاری",
   "SHOW_ALBUM": "دیدن آلبوم",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "پریدن به صفحه \"Now playing\" بعد از پخش موسیقی",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "دیدن وضعیت موسیقی در تسک‌بار",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "تصادفی",
   "SORT": "ترتیب",
   "SORT_BY": "ترتیب بر اساس",
