--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "प्रोजेक्ट और इसके डेवलपर्स के बारे में जानकारी",
   "ABOUT_TITLE": "प्रोजेक्ट के बारे में",
   "ADD_NEW_FOLDER": "नया फ़ोल्डर बनाये",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "अभी चल रहे गानों में जोड़ें",
   "ADD_TO_PLAYLIST": "प्लेलिस्ट में जोड़ें",
   "ALBUM": "एल्बम",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A से Z",
   "BUFFERING": "बफर हो रहा है...",
   "CANCEL": "कैंसिल",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "कलेक्शन",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "क्या आप इस एल्बम को डिलीट करना चाहते हैं?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "डिलीट",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "अनुशंसित",
   "REFRESH": "रिफ्रेश",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindex",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "हटाये",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "ऐप मोड",
   "SHARE": "शेयर",
   "SHOW_ALBUM": "Show album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
