--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "Saiba mais sobre nós",
   "ABOUT_TITLE": "Sobre",
   "ADD_NEW_FOLDER": "ADICIONAR NOVA PASTA",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Adicionar para tocar agora",
   "ADD_TO_PLAYLIST": "Adicionar à playlist",
   "ALBUM": "Álbuns",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "Artista",
   "ASCENDING": "Ascendente",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Adicione automaticamente outras músicas da coleção para tocar agora após a conclusão do álbum",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Carregando...",
   "CANCEL": "CANCELAR",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Coleção",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindexar",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "REMOVER",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repitir",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Compartilhar",
   "SHOW_ALBUM": "Mostrar album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Saltar automaticamente para \"Agora tocando\" tela depois de reproduzir uma faixa",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Mostrar o progresso da trilha na barra de tarefas",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Embaralhar",
   "SORT": "Organizar",
   "SORT_BY": "Ordenar Por",
