--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "Информация о проекте и его разработчиках.",
   "ABOUT_TITLE": "О приложении",
   "ADD_NEW_FOLDER": "ДОБАВИТЬ ПАПКУ",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Добавить в очередь",
   "ADD_TO_PLAYLIST": "Добавить в плейлист",
   "ALBUM": "Альбомы",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "Исполнитель",
   "ASCENDING": "По возрастанию",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Добавлять другие треки из коллекции по окончании плейлиста",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Проверять наличие новых файлов при каждом запуске",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "По алфавиту",
   "BUFFERING": "Буферизация...",
   "CANCEL": "ОТМЕНА",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Коллекция",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Вы действительно хотите удалить альбом?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Удалить альбом",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Переиндексировать",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "УДАЛИТЬ",
   "REMOVE_FROM_PLAYLIST": "Удалить из плейлиста",
   "REPEAT": "Повторять",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "Тема",
   "SHARE": "Поделиться",
   "SHOW_ALBUM": "Показать альбом",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Открывать очередь по окончании плейлиста",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Показывать прогресс на панели задач",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Перемешивать",
   "SORT": "Сортировка",
   "SORT_BY": "Сортировать",
