--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "应用及开发者信息",
   "ABOUT_TITLE": "关于",
   "ADD_NEW_FOLDER": "添加新目录",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "添加到正在播放列表",
   "ADD_TO_PLAYLIST": "添加到播放列表",
   "ALBUM": "专辑",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "艺术家",
   "ASCENDING": "升序",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "当前专辑播放完毕后自动添加其他歌曲至正在播放列表",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A 到 Z",
   "BUFFERING": "缓冲中...",
   "CANCEL": "取消",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "收藏",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "重新检索",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "移除",
   "REMOVE_FROM_PLAYLIST": "从播放列表移除",
   "REPEAT": "Repeat",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "主题",
   "SHARE": "分享",
   "SHOW_ALBUM": "显示专辑",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "在播放完一首歌曲后将自动跳转到 \"正在播放\" ",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "在任务栏显示播放进度",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "随机播放",
   "SORT": "排序",
   "SORT_BY": "根据...排序",
