--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "Information about the app & its developers",
   "ABOUT_TITLE": "About",
   "ADD_NEW_FOLDER": "Add new folder",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Add to now playing",
   "ADD_TO_PLAYLIST": "Add to playlist",
   "ALBUM": "Albums",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Start playing other music from collection after queue completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change \"Now Playing Bar\" color based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Collection",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Delete the album \"NAME\"?",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Delete",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "Suggestions",
   "REFRESH": "Refresh",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindex",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "REMOVE",
   "REMOVE_FROM_PLAYLIST": "Remove from playlist",
   "REPEAT": "Repeat",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
   "SHOW_ALBUM": "Show album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to \"Now Playing\" screen after playing a track",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Sort By",
