--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -2,6 +2,7 @@
   "ABOUT_SUBTITLE": "Informacije o nas...",
   "ABOUT_TITLE": "O nas",
   "ADD_NEW_FOLDER": "DODAJ NOV DIREKTORIJ",
+  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
   "ADD_TO_NOW_PLAYING": "Dodaj v seznam predvajanja",
   "ADD_TO_PLAYLIST": "Dodaj na seznam predvajanja",
   "ALBUM": "Albumi",
@@ -11,11 +12,14 @@
   "ARTIST_SINGLE": "Ustvarjalec",
   "ASCENDING": "Po abecedi naprej",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "Od A do Z",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Zbirka",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
@@ -108,8 +112,10 @@
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindeksiraj",
   "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "ODSTRANI",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
   "REPEAT": "Repeat",
@@ -158,8 +164,10 @@
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
   "SHOW_ALBUM": "Pokaži album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Automatically jump to \"Now playing\" screen after playing a track",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Show track progress on taskbar",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Nw Playing Screen\" after a track is selected for playing",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
   "SHUFFLE": "Shuffle",
   "SORT": "Sort",
   "SORT_BY": "Filter",
