Integrate proxy settings (#251)
Co-authored-by: Hitesh Kumar Saini <saini123hitesh@gmail.com>

--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -11,21 +11,21 @@
   "ARTIST": "Skladatelji",
   "ARTIST_SINGLE": "Ustvarjalec",
   "ASCENDING": "Po abecedi naprej",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Avtomatično dodaj nove pesmi iz kolekcije v trenutno predvajano po zaljučku albuma",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
+  "AUTO_REFRESH_SETTING": "Avtomatično preveri za nove datoteke na zagonu",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
   "A_TO_Z": "Od A do Z",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Zamenjaj barvo \"Now Playing Bar\" glede na glasbo, ki jo poslušaš",
   "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
   "COLLECTION": "Zbirka",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
   "COLLECTION_INDEXING_HINT": "Dodajam tvojo glasbo ...",
   "COLLECTION_INDEXING_LABEL": "Tvoja kolekcija se sinhronizira z aplikacijo.\nNi dobra ideja, da zapreš aplikacijo.",
-  "COLLECTION_INFO_SUBHEADER": "Nekaj stvari o albumu",
+  "COLLECTION_INFO_SUBHEADER": "Nekaj informacij o albumu",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Tukaj so shranjeni albumi",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Tukaj so ustvarjalci, shranjeni v tvoji napravi.",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Tukaj so ostale pesmi",
@@ -51,31 +51,31 @@
   "DELETE_TRACK": "Izbriši pesem",
   "DESCENDING": "Po abecedi nazaj",
   "DISCORD": "DISCORD STREŽNIK",
-  "DISCOVERING_FILES": "Discovering files...",
+  "DISCOVERING_FILES": "Odkrivam datoteke...",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
-  "EXIT_NOW_PLAYING": "Exit now playing",
+  "EXIT_NOW_PLAYING": "Zapri trenutno predvajano",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
   "EXIT_TITLE": "Izhod",
-  "EXPERIMENTAL": "Experimental",
-  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
+  "EXPERIMENTAL": "Eksperimentalno",
+  "EXPERIMENTAL_SUBTITLE": "Te nastavitve še niso stabilne.",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
-  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "Počakajte",
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
   "KNOW_MORE": "POGLEJ VEČ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
-  "LESS": "Less",
+  "LESS": "Manj",
   "LISTENING_TO_MUSIC": "Posluša glasbo 💜",
   "LYRICS": "Besedilo pesmi",
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MENU": "Meni",
-  "MORE": "More",
+  "MORE": "Več",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
-  "NEXT": "Next",
+  "NEXT": "Naslednja",
   "NO": "NE",
   "NOTIFICATION_LYRICS_SUBTITLE": "Pokaži besedilo pesmi v obvestilih.",
   "NOTIFICATION_LYRICS_TITLE": "Besedilo pesmi v obvestilu",
@@ -91,38 +91,40 @@
   "NO_PLAYLISTS_FOUND": "Nismo našli seznamov predvajanja.\nUstvari jih, če jih hočeš videti.",
   "N_TRACKS": "N pesmi",
   "OK": "OK",
-  "OPEN_IN_BROWSER": "Open in browser",
-  "OPTIONS": "Opcije",
-  "ORDER": "Order",
-  "PAUSE": "Pause",
-  "PLAY": "Play",
-  "PLAYLIST": "Playlists",
+  "OPEN_IN_BROWSER": "Odpri v brskalniku",
+  "OPTIONS": "Možnosti",
+  "ORDER": "Vrstni red",
+  "PAUSE": "Ustavi",
+  "PLAY": "Predvajaj",
+  "PLAYLIST": "Seznami predvajanja",
   "PLAYLISTS_CREATE": "Ustvari seznam predvajanja",
   "PLAYLISTS_SUBHEADER": "Seznami predvajanja na voljo v tvoji napravi",
   "PLAYLISTS_TEXT_FIELD_HINT": "Ime za tvoj seznam predvajanja",
   "PLAYLISTS_TEXT_FIELD_LABEL": "Ime seznama predvajanja",
   "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
   "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
-  "PLAYLIST_SINGLE": "Playlist",
+  "PLAYLIST_SINGLE": "Seznam predvajanja",
   "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
   "PLAY_NOW": "Predvajaj zdaj",
-  "PLAY_URL": "Play URL",
-  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
+  "PLAY_URL": "Predvajaj URL",
+  "PLAY_URL_SUBTITLE": "Vpiši URI do avdio datoteke",
   "PREVIOUS": "Prejšnja",
+  "PROXY_SUBTITLE": "Nastavite proxy strežnik za YouTube & YouTube Music (ne velja za MPV). To laho zagotovo zmanjša odzivnost, ampak se uporablja, če YouTube Music ni na voljo v vaši državi.",
+  "PROXY_TITLE": "Proxy strežnik",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
-  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
+  "REFRESH_INFORMATION": "Samo preveri za nove & izbrisane datoteke za posodobitev glasbene zbirke (hitreje)",
   "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
   "REINDEX": "Reindeksiraj",
-  "REINDEX_INFORMATION": "Builds the music library again (slower)",
+  "REINDEX_INFORMATION": "Ponovno zgradi glasbeno zbirko (počasneje)",
   "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
   "REMOVE": "ODSTRANI",
   "REMOVE_FROM_PLAYLIST": "Odstrani iz seznama predvajanja",
-  "REPEAT": "Repeat",
+  "REPEAT": "Ponavljaj",
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
-  "SAVE_AS_PLAYLIST": "Save as playlist",
+  "SAVE_AS_PLAYLIST": "Shrani kot seznam predvajanja",
   "SAVE_TO_DOWNLOADS": "Shrani med prenose",
   "SEARCH": "Išči",
   "SEARCH_COLLECTION": "Preišči kolekcijo",
@@ -164,14 +166,14 @@
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
   "SHOW_ALBUM": "Pokaži album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Avtomatično preskoči na \"Now playing\" zaslon ko se predvaja pesem",
   "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
-  "SHUFFLE": "Shuffle",
-  "SORT": "Sort",
+  "SHUFFLE": "Naključno mešaj",
+  "SORT": "Sortiraj",
   "SORT_BY": "Filter",
-  "SPEED": "Speed",
+  "SPEED": "Hitrost",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "SWITCH_THEME": "Zamenjaj temo",
   "THEME_MODE_DARK": "Temni",
@@ -182,7 +184,7 @@
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
   "UNMUTE": "Unmute",
-  "UPDATE_AVAILABLE": "Update available: VERSION",
+  "UPDATE_AVAILABLE": "Posodobitev na voljo: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Opozorilo",
   "WEB": "YT Music",
