--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -109,6 +109,8 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "前へ",
+  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
