update translations & strings

--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
   "NEXT": "次へ",
   "NO": "いいえ",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "歌詞を通知パネルに表示する",
   "NOTIFICATION_LYRICS_TITLE": "歌詞を通知に表示",
   "NOW_PLAYING": "再生中",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "前へ",
-  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
