--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
   "NEXT": "Naslednja",
   "NO": "NE",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Pokaži besedilo pesmi v obvestilih.",
   "NOTIFICATION_LYRICS_TITLE": "Besedilo pesmi v obvestilu",
   "NOW_PLAYING": "Zdaj se predvaja",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Predvajaj URL",
   "PLAY_URL_SUBTITLE": "Vpiši URI do avdio datoteke",
   "PREVIOUS": "Prejšnja",
-  "PROXY_SUBTITLE": "Nastavite proxy strežnik za YouTube & YouTube Music (ne velja za MPV). To laho zagotovo zmanjša odzivnost, ampak se uporablja, če YouTube Music ni na voljo v vaši državi.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy strežnik",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
