--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
   "NO": "NEE",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Songteksten weergeven in notficaties",
   "NOTIFICATION_LYRICS_TITLE": "Notificatie songteksten",
   "NOW_PLAYING": "Speelt nu",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Previous",
-  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "Aanbevelingen",
   "REFRESH": "HERLADEN",
