--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
   "NEXT": "Próxima",
   "NO": "NÃO",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
   "NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
   "NOW_PLAYING": "Tocando agora",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Anterior",
-  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
