--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
   "NEXT": "Далее",
   "NO": "НЕТ",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Показывать тексты песен в уведомлении.",
   "NOTIFICATION_LYRICS_TITLE": "Тексты в уведомлении",
   "NOW_PLAYING": "Очередь",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Назад",
-  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
