--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M låtar & N album",
   "NEXT": "Nästa",
   "NO": "NEJ",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
   "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
   "NOW_PLAYING": "Now playing",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Föregående",
-  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
