--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -77,6 +77,7 @@
   "M_TRACKS_AND_N_ALBUMS": "M Müzik ile N Albüm",
   "NEXT": "Sonraki",
   "NO": "HAYIR",
+  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Sözleri bir bildirimde göster",
   "NOTIFICATION_LYRICS_TITLE": "Bildirim şeklinde sözler",
   "NOW_PLAYING": "Şu anda oynatılıyor",
@@ -109,7 +110,7 @@
   "PLAY_URL": "Play URL",
   "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
   "PREVIOUS": "Önceki",
-  "PROXY_SUBTITLE": "Setup a proxy for YouTube & YouTube Music (not applicable to MPV yet). This can certainly decrease fetching speed, but should be used if your country doesn't support YouTube Music or has blocked it.",
+  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "Önerilenler",
   "REFRESH": "YENİLE",
