update translations & constant strings

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Azalan",
   "DISCORD": "DISCORD SUNUCUSU",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "GÜNCƏLLƏ",
   "ENABLE_125_SCALING": "125% ölçəkləməni aktivləşdir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u aktivləşdir",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Öncəki",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Önərilənlər",
   "REFRESH": "YENİLƏ",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
