--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -52,6 +52,7 @@
   "DESCENDING": "نزولی",
   "DISCORD": "سرور دیسکورد",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "دانلود آخرین بروزرسانی",
   "ENABLE_125_SCALING": "فعال کردن مقیاس 125 درصدی",
   "ENABLE_ACRYLIC_BLUR": "فعال کردن بلور ویندوز",
@@ -112,6 +113,7 @@
   "PREVIOUS": "قبلی",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "پیشنهادات",
   "REFRESH": "بروزرسانی",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
