--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVEUR",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "SINTOMY NY FANAVAOZANA VAOVAO",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Previous",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Tolo-kevitra",
   "REFRESH": "Havaozina",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
