--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Descendente",
   "DISCORD": "SERVIDOR DO DISCORD",
   "DISCOVERING_FILES": "Descobrindo arquivos...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Anterior",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
