--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -52,6 +52,7 @@
   "DESCENDING": "По убыванию",
   "DISCORD": "DISCORD",
   "DISCOVERING_FILES": "Поиск файлов...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Назад",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Рекомендации",
   "REFRESH": "ОБНОВИТЬ",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
