--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Po abecedi nazaj",
   "DISCORD": "DISCORD STREŽNIK",
   "DISCOVERING_FILES": "Odkrivam datoteke...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Prejšnja",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy strežnik",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Priporočeno",
   "REFRESH": "OSVEŽI",
   "REFRESH_INFORMATION": "Samo preveri za nove & izbrisane datoteke za posodobitev glasbene zbirke (hitreje)",
