--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Azalan",
   "DISCORD": "DISCORD SUNUCUSU",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "GÜNCELLE",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Önceki",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Önerilenler",
   "REFRESH": "YENİLE",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
