--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -52,6 +52,7 @@
   "DESCENDING": "降序",
   "DISCORD": "DISCORD 服务器",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "下载更新",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Previous",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "推荐",
   "REFRESH": "刷新",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
