--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Descendant",
   "DISCORD": "Serveur Discord",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "TODOActiver le flou acrylique Windows",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Précédent",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Recommandations",
   "REFRESH": "Actualiser",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
