--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Descending",
   "DISCORD": "डिस्कॉर्ड सर्वर",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "डाउनलोड अपडेट",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Previous",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "अनुशंसित",
   "REFRESH": "रिफ्रेश",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
