--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SZERVER",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Windows áttetsző háttér engedélyezése",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Previous",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Ajánlott",
   "REFRESH": "FRISSÍTÉS",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
