--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -52,6 +52,7 @@
   "DESCENDING": "降順",
   "DISCORD": "Discordサーバー",
   "DISCOVERING_FILES": "ファイルを探しています...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
@@ -112,6 +113,7 @@
   "PREVIOUS": "前へ",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "おすすめ",
   "REFRESH": "リフレッシュ",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
