--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "UPDATE",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Previous",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Aanbevelingen",
   "REFRESH": "HERLADEN",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
