--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -52,6 +52,7 @@
   "DESCENDING": "Sjunkande",
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Discovering files...",
+  "DONATE": "Donate",
   "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
   "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
@@ -112,6 +113,7 @@
   "PREVIOUS": "Föregående",
   "PROXY_SUBTITLE": "Enable proxy for external media resources.",
   "PROXY_TITLE": "Proxy",
+  "PROXY_URL": "Proxy URL",
   "RECOMMENDATIONS": "Rekommenderat",
   "REFRESH": "UPPDATERA",
   "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
