--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -2,7 +2,7 @@
   "ABOUT_SUBTITLE": "Saiba mais sobre nós",
   "ABOUT_TITLE": "Sobre",
   "ADD_NEW_FOLDER": "ADICIONAR NOVA PASTA",
-  "ADD_NEW_FOLDER_SUBTITLE": "Add a new folder to your music library.",
+  "ADD_NEW_FOLDER_SUBTITLE": "Adicione uma nova pasta à sua biblioteca de música.",
   "ADD_TO_NOW_PLAYING": "Adicionar para tocar agora",
   "ADD_TO_PLAYLIST": "Adicionar à playlist",
   "ALBUM": "Álbuns",
@@ -12,14 +12,14 @@
   "ARTIST_SINGLE": "Artista",
   "ASCENDING": "Ascendente",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Adicione automaticamente outras músicas da coleção para tocar agora após a conclusão do álbum",
-  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
-  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
-  "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Ative a reprodução contínua",
+  "AUTO_REFRESH_SETTING": "Verifique automaticamente se há novos arquivos ao iniciar de novo",
+  "AUTO_REFRESH_SETTING_TITLE": "Pesquisa automática de música ao iniciar",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Carregando...",
   "CANCEL": "CANCELAR",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Change the color of \"Now Playing Bar\" based on music",
-  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Dynamic Now Playing Bar coloring",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC": "Mude a cor de \"Barra Tocando Agora\" baseado na música",
+  "CHANGE_NOW_PLAYING_BAR_COLOR_BASED_ON_MUSIC_TITLE": "Coloração dinâmica da Barra Tocando Agora",
   "COLLECTION": "Coleção",
   "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
   "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
@@ -66,18 +66,18 @@
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
   "KNOW_MORE": "SABER MAIS",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Pelo menos uma pasta precisa permanecer em sua coleção.",
-  "LESS": "Less",
+  "LESS": "Menos",
   "LISTENING_TO_MUSIC": "Ouvindo música 💜",
   "LYRICS": "Letras",
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MENU": "Menu",
-  "MORE": "More",
+  "MORE": "Mais",
   "MUTE": "Mudo",
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
   "NEXT": "Próxima",
   "NO": "NÃO",
-  "NOTHING_IN_QUEUE": "There's nothing in the queue.",
+  "NOTHING_IN_QUEUE": "Não há nada na fila.",
   "NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
   "NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
   "NOW_PLAYING": "Tocando agora",
@@ -92,7 +92,7 @@
   "NO_PLAYLISTS_FOUND": "Nenhuma playlist encontrada.\nCrie alguns para vê-los lá.",
   "N_TRACKS": "N faixas",
   "OK": "OK",
-  "OPEN_IN_BROWSER": "Open in browser",
+  "OPEN_IN_BROWSER": "Abra no navegador",
   "OPTIONS": "Opções",
   "ORDER": "Pedido",
   "PAUSE": "Pausar",
@@ -107,25 +107,25 @@
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
   "PLAY_NOW": "Reproduzir agora",
-  "PLAY_URL": "Play URL",
-  "PLAY_URL_SUBTITLE": "Enter URI to the media resource",
+  "PLAY_URL": "Reproduzir URL",
+  "PLAY_URL_SUBTITLE": "Insira a URL para o recurso de mídia",
   "PREVIOUS": "Anterior",
-  "PROXY_SUBTITLE": "Enable proxy for external media resources.",
+  "PROXY_SUBTITLE": "Ativar proxy para recursos de mídia externos.",
   "PROXY_TITLE": "Proxy",
   "RECOMMENDATIONS": "Recomendações",
   "REFRESH": "ATUALIZAR",
-  "REFRESH_INFORMATION": "Just checks for the new added & deleted files to updates the music library (faster)",
-  "REFRESH_SUBTITLE": "Check for newly added & deleted music files to update the music library.",
+  "REFRESH_INFORMATION": "Apenas verifica os novos arquivos adicionados e excluídos para atualizar a biblioteca de músicas (mais rápido)",
+  "REFRESH_SUBTITLE": "Verifique se há arquivos de música recém-adicionados e excluídos para atualizar a biblioteca de músicas.",
   "REINDEX": "Reindexar",
-  "REINDEX_INFORMATION": "Builds the music library again (slower)",
-  "REINDEX_SUBTITLE": "Build the complete music library after clearing current database.",
+  "REINDEX_INFORMATION": "Construir a biblioteca de música novamente (mais lento)",
+  "REINDEX_SUBTITLE": "Construir a biblioteca de música completa depois de limpar o banco de dados atual.",
   "REMOVE": "REMOVER",
   "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repitir",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
-  "SAVE_AS_PLAYLIST": "Save as playlist",
+  "SAVE_AS_PLAYLIST": "Salvar como playlist",
   "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
   "SEARCH": "Procurar",
   "SEARCH_COLLECTION": "Procurar Coleção",
@@ -167,10 +167,10 @@
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Compartilhar",
   "SHOW_ALBUM": "Mostrar album",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Jump to Now Playing Screen on play",
-  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Show \"Now Playing Screen\" after a track is selected for playing",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Enable taskbar indicator",
-  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Show track playback percentage on taskbar app icon",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING": "Pular para a Tela Em Execução ao reproduzir",
+  "SHOW_NOW_PLAYING_AFTER_PLAYING_SUBTITLE": "Mostrar \"Tela Em Execução\" depois que uma faixa é selecionada para reprodução",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Ativar indicador da barra de tarefas",
+  "SHOW_TRACK_PROGRESS_ON_TASKBAR_SUBTITLE": "Mostrar a porcentagem de reprodução da faixa no ícone do aplicativo da barra de tarefas",
   "SHUFFLE": "Embaralhar",
   "SORT": "Organizar",
   "SORT_BY": "Ordenar Por",
@@ -185,7 +185,7 @@
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
   "UNMUTE": "Desativar Mudo",
-  "UPDATE_AVAILABLE": "Update available: VERSION",
+  "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
   "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
   "WEB": "YT Music",
